--- a/flip_coin/web/index.html
+++ b/flip_coin/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>flip_coin</title>
+  <title>Flip Coin</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
